<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="br.com.brunocarvalhs.billet_registration.form.BilletRegistrationFormViewModel" />
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.billet_registration.form.BilletRegistrationFormFragment">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar4"
                        app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text"
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="24dp"
                            android:gravity="center"
                            android:text="@string/fragment_billet_registration_form_title_text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/billet_registration_textfield_name_hilt"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:startIconDrawable="@drawable/ic_baseline_doc_24"
                            app:layout_constraintTop_toBottomOf="@+id/text">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.name}"
                                android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/prompt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/billet_registration_textfield_prompt_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/name"
                            app:startIconDrawable="@drawable/ic_baseline_prompt_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.prompt}"
                                android:inputType="date" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/billet_registration_textfield_value_hilt"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/prompt"
                            app:startIconDrawable="@drawable/ic_baseline_value_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.value}"
                                android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/date_payment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/billet_registration_textfield_date_payment_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/value"
                            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.datePayment}"
                                android:inputType="date" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/barcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/billet_registration_textfield_barcode_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_camera_alt_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/date_payment"
                            app:startIconDrawable="@drawable/ic_baseline_barcode_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.barCode}"
                                android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.bottomappbar.BottomAppBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="BottomAppBar"
                        android:id="@+id/bottomAppBar4">

                    <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/linearLayoutCompat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                        <Button
                                android:id="@+id/cancel"
                                style="@style/Widget.Material3.Button.TextButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:text="@string/fragment_billet_registration_form_button_cancel_text"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.divider.MaterialDivider
                                android:id="@+id/divider"
                                android:layout_width="1dp"
                                android:layout_height="32dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/registration"
                                app:layout_constraintStart_toEndOf="@id/cancel"
                                app:layout_constraintTop_toTopOf="parent" />

                        <Button
                                android:id="@+id/registration"
                                style="@style/Widget.Material3.Button.TextButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:text="@string/fragment_billet_registration_form_button_registration_text"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/divider"
                                app:layout_constraintTop_toTopOf="parent" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.bottomappbar.BottomAppBar>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</layout>